[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/slime/idle/Slime_Idle1.png" type="Texture" id=1]
[ext_resource path="res://_old/Slime.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/slime/idle/Slime_Idle3.png" type="Texture" id=5]
[ext_resource path="res://_old/EnemyManager.tscn" type="PackedScene" id=6]

[sub_resource type="StreamTexture" id=10]
load_path = "res://.import/Slime_Idle2.png-371aef4091b0eb8963aca7ae9ac00a29.stex"

[sub_resource type="StreamTexture" id=11]
load_path = "res://.import/Slime_Idle4.png-4537653b1e6c6ba124ea5a578cd4d072.stex"

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), SubResource( 10 ), ExtResource( 5 ), SubResource( 11 ) ],
"loop": true,
"name": "slime_idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.0
height = 8.0

[sub_resource type="CircleShape2D" id=8]
radius = 86.0058

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 6.0
height = 14.0

[node name="Slime" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -17 )
frames = SubResource( 1 )
animation = "slime_idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1, -2 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="EnemyManager" parent="." instance=ExtResource( 6 )]
MAX_SPEED = 50
TOLERANCE = 40

[node name="PDZCollisionShape" parent="EnemyManager/PlayerDetectionZone" index="0"]
visible = false
shape = SubResource( 8 )

[node name="SoftCollisionShape2D" parent="EnemyManager/SoftCollision" index="0"]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 7 )

[node name="CollisionShape2D" parent="EnemyManager/Hitbox" index="0"]
visible = false

[node name="Hurtbox" parent="EnemyManager" index="6"]
collision_layer = 64

[node name="CollisionShape2D" parent="EnemyManager/Hurtbox" index="0"]
visible = false
position = Vector2( 1, -2 )
rotation = 1.5708
shape = SubResource( 9 )

[connection signal="death_effect" from="EnemyManager" to="." method="_on_EnemyManager_death_effect"]
[connection signal="start_movement" from="EnemyManager" to="." method="_on_EnemyManager_start_movement"]
[connection signal="area_entered" from="EnemyManager/Hurtbox" to="EnemyManager" method="_on_Hurtbox_area_entered"]

[editable path="EnemyManager"]
[editable path="EnemyManager/Hitbox"]
[editable path="EnemyManager/Hurtbox"]
